instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: not found: value blue
setCouleurBrosse(blue)
                 ^InstructionsDrawG:4: error: not found: value avanace
avanace(4)
^